# evol-sandbox

./: .gitignore  config.lua  meson.build  scratch.md
buildscripts/: evoldllcopy.ps1  flecsdllcopy.ps1  luadllcopy.ps1  meson.build
res/project/: Avocado.mesh  game.proj
res/project/res/scenes/: MainScene.evsc  SideScene.evsc  TestScene.evsc
res/project/res/scripts/MainScene/: Camera.lua  CameraHelper.lua  camera.lua  child.lua  player.lua
res/project/res/scripts/Scene0/: player.lua
res/project/res/scripts/Scene1/: child.lua  player.lua
res/project/res/scripts/SideScene/: Ghost.lua  Player.lua  camera.lua  player.lua
res/project/res/scripts/TestScene/: Camera.lua
res/project/res/shaders/: default.frag  default.vert
res/scripts/Scene0/: camera.lua  child.lua  player.lua
src/: main.c
subprojects/: evmod_assets.wrap  evmod_assetsystem.wrap  evmod_ecs.wrap  evmod_game.wrap  evmod_glfw.wrap  evmod_physics.wrap  evmod_renderer.wrap  evmod_script.wrap  evmod_world.wrap  evol.wrap  project_assets.wrap
subprojects/packagefiles/project_assets/: meson.build
